fix: 支持 Model 多厂商，试用版强制使用内置的，不可修改。
